feat: added apis for belief entries
